<resources>
    <string name="app_name">TrackerTestTask</string>
    <string name="now">Сейчас:</string>
    <string name="zero">0.00</string>
    <string name="empty_string"> </string>
    <string name="settings">Настройки</string>
    <string name="reset">Сбросить</string>
    <string name="select_the_number_of_hours_worked">Выберете количество отработанных часов</string>
    <string name="hours">Часы</string>
    <string name="minutes">Минуты</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="edit_color">Изменить цвет</string>
    <string name="edit_price">Изменить цену</string>
    <string name="edit_currency">Изменить валюту</string>
    <string name="pink">pink</string>
    <string name="yellow">yellow</string>
    <string name="grey">grey</string>
    <string name="input_price_per_hour">Введите цену за час работы</string>
    <string name="details">Подробнее</string>
    <string name="are_you_you_want_delete_all_marked_hours">Вы действительно хотите удалить все отмеченные часы?</string>
    <string name="open_bracket"> (</string>
    <string name="close_bracket"> )</string>
    <string name="hours_">Часы -</string>
</resources>