<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/pinkColor"
        android:layout_width="@dimen/size_70"
        android:layout_height="@dimen/size_70"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/pink"
        android:textColor="@android:color/transparent" />

    <TextView
        android:id="@+id/yellowColor"
        android:layout_width="@dimen/size_70"
        android:layout_height="@dimen/size_70"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/yellow"
        android:textColor="@android:color/transparent" />

    <TextView
        android:id="@+id/greyColor"
        android:layout_width="@dimen/size_70"
        android:layout_height="@dimen/size_70"
        android:background="@color/dark_grey"
        android:gravity="center"
        android:text="@string/grey"
        android:textColor="@android:color/transparent" />
</LinearLayout>
