<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/edit_color_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:onClick="chooseColor"
        android:text="@string/edit_color"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <View
        android:id="@+id/first_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_2"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@color/pink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_color_text_view" />

    <TextView
        android:id="@+id/edit_cost_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:onClick="changePrice"
        android:text="@string/edit_price"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_view"
        tools:ignore="UsingOnClickInXml" />

    <View
        android:id="@+id/second_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@color/pink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_cost_text_view" />

    <TextView
        android:id="@+id/edit_currency_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:onClick="changeCurrency"
        android:paddingBottom="@dimen/padding_20"
        android:text="@string/edit_currency"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_view"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>